apps/base/pinepods/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinepods
  namespace: pinepods
  labels:
    app: pinepods
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinepods
  template:
    metadata:
      labels:
        app: pinepods
    spec:
      containers:
        - name: pinepods
          image: madeofpendletonwool/pinepods:0.9.0
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8040
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8040
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 8040
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: data
              mountPath: /opt/pinepods/downloads
              subPath: downloads
            - name: data
              mountPath: /opt/pinepods/backups
              subPath: backups
            - name: data
              mountPath: /opt/pinepods/local-media
              subPath: local-media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pinepods-data
