apps/base/pinepods/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pinepods
  namespace: pinepods
  labels:
    app: pinepods
spec:
  selector:
    app: pinepods
  ports:
    - name: http
      port: 8040
      targetPort: 8040
